Fix text align for h1 (#29)

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ h1 {
   font-size: clamp(36px, 3.33vw, 64px);
   font-weight: 700;
   line-height: 1;
+  text-align: center;
 }
 
 .link {
